...
                        Jogue partidas para começar a{'\n'}acompanhar seu desempenho
                    </Text>
                    <TouchableOpacity
                        onPress={() => router.push('/match/create')}
                        className="bg-black px-5 py-2.5 rounded-xl"
                    >
                        <Text className="text-white font-semibold">Criar partida</Text>
                    </TouchableOpacity>
                </View>
            </View>
        );
    }

...
