...
          icon={ChevronLeft}
          onPress={() => router.back()}
          variant="default"
          iconColor={Colors.primary}
        />
        <Text className="flex-1 text-xl font-bold text-black text-center mr-10">
          Configurações
        </Text>
      </View>

      <ScrollView
        className="flex-1"
        showsVerticalScrollIndicator={false}
...
